--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_improved_scrolling: ^0.0.3
   url_launcher: ^6.1.5
   http: ^0.13.4
+  ffi: ^2.1.0
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding
